fixed bug on thumbnail image url click and css thumbnail alignment with main image

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -45,6 +45,7 @@ img#mainimage {
 }
 
 ul#thumbnailcontainer {
+  margin-block-start: 0;
   list-style: none;
   justify-content: flex-start;
 }
